@W-7733122 fix pills truncation (css) (#642)

--- a/packages/@flow-builder/ui/src/builder_platform_interaction/combobox/combobox.css
+++ b/packages/@flow-builder/ui/src/builder_platform_interaction/combobox/combobox.css
@@ -2,6 +2,3 @@
     width: fit-content;
     max-width: 100%;
 }
-.divParentPillGroupedComboxBox {
-    width: auto;
-}
